# opencc-cli

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: main.rs
tests/: e2e.rs
